# opt

./: .gitignore
01-lab-undim/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
01-lab-undim/ufo/: unidimensional_function_optimization.cpp  unidimensional_function_optimization.h
02-lab-grad/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
02-lab-grad/generator/: generate_stat.cpp  generate_stat.h
02-lab-grad/methods/: grad_methods.cpp  grad_methods.h
02-lab-grad/qcustomplot/: qcustomplot.cpp
02-lab-grad/test/: test.cpp
02-lab-grad/undim_methods/: undim_methods.cpp  undim_methods.h
03-lab-matrix/: CMakeLists.txt  conj_grad_tables_generator.cpp  gtest_test.cpp  test.cpp
03-lab-matrix/gtest/: gtest-all.cc  gtest.h
03-lab-matrix/src/: LinearSystem.cpp  LinearSystem.h  generator.h  latex_tools.h  new_generators.cpp  new_generators.h
03-lab-matrix/src/matrix/: CanonicalMatrix.h  LUMatrix.h  Matrix.h  ProfileMatrix.cpp  ProfileMatrix.h  SparseMatrix.cpp  SparseMatrix.h  Vector.h
04-lab-newton/: CMakeLists.txt  definitions.cmake
04-lab-newton/src/functions/: Function.h  QuadFunction.h
04-lab-newton/src/generators/matrix_lab/: leading_tables_generators.cpp  lu_tables_generator.cpp  new_generators.cpp  new_generators.h  old_generators.h
04-lab-newton/src/graphics/: CMakeLists.txt
04-lab-newton/src/graphics/graph_drawer/: GraphDrawerWindow.cpp  GraphDrawerWindow.h  GraphDrawerWindow.ui  build_ui.sh  graph_drawer.cpp  ui_GraphDrawerWindow.h
04-lab-newton/src/graphics/visualiser/: VisualiserWindow.cpp  VisualiserWindow.h  VisualiserWindow.ui  build_ui.sh  ui_VisualiserWindow.h  visualiser.cpp
04-lab-newton/src/linear_system_solvers/: LinearSystem.cpp  LinearSystem.h
04-lab-newton/src/matrices/: CanonicalMatrix.h  LUMatrix.h  Matrix.h  ProfileMatrix.cpp  ProfileMatrix.h  SparseMatrix.cpp
04-lab-newton/src/methods/: logging.h
04-lab-newton/src/methods/grad_methods/: grad_methods.cpp  grad_methods.h  matrix.h
04-lab-newton/src/methods/newton_methods/: newton_methods.cpp  newton_methods.h
04-lab-newton/src/methods/quasi_newton_methods/: quasi_newton_methods.cpp  quasi_newton_methods.h
04-lab-newton/src/methods/unidim_methods/: unidim_methods.cpp  unidim_methods.h
04-lab-newton/test/: matrix_lab_tests.cpp  newton_lab_tests.cpp  quasi_newton_lab_tests.cpp
